styles.css
/*
 * $Id$
 * Copyright 2004,2005 - Michael Sinz
 */

@import url(frame/style.css);
@import url(gauge/style.css);
@import url(innerframe/frame.css);
@import url(innerframe/table.css);
@import url(boldframe/frame.css);

html, body
{
  font-family: sansserif;
  font-size: 10pt;
  text-align: center;
  background-image: url('./PoweredByInsurrection.gif');
  background-position: bottom center;
  background-repeat: no-repeat;
}

img { border: none; }

a {color: blue; text-decoration: none;}
a:visited {color: blue; text-decoration: none;}
a:hover {color: green; text-decoration: underline;}
a:active {color: red; text-decoration: underline;}

form
{
  margin: 0px;
  padding: 0px;
  border: 0px;
}

#pagetable
{
  text-align: left;
  margin-left: auto;
  margin-right: auto;
}

#content
{
  /* Remove the width style if you want it to be more dynamic */
  width: 672px;
  color: black;
  background: white;
}

#EdDescription, #RepoDescription
{
  font-family: sansserif;
  font-size: 10pt;
  text-align: left;
  margin: 0px;
  border: 0px;
  padding: 1px;
}

#EdDescription
{
  background-color: #FFFFBB;
}

.admin-title
{
  font-size: 20pt;
  text-align: center;
  margin-bottom: 5px;
}

.footer
{
  padding: 0.5em 1em 0.5em 1em;
  background: rgb(88%,90%,92%);
  font-size: 80%;
  text-align: right;
  white-space: nowrap;
  background-image: url('./PoweredByInsurrection.gif');
  background-position: center left;
  background-repeat: no-repeat;
}

.svn
{
  margin-top: 0.3em;
  margin-bottom: 0.3em;
  padding-top: 0.3em;
  padding-bottom: 0.3em;
  border-top: 1px black solid;
  border-bottom: 1px black solid;
}

#localbanner
{
  margin: 0.3em;
  padding: 0.5em;
  border: 1px rgb(20%,20%,20%) solid;
  color: rgb(20%,20%,20%);
  background: rgb(95%,95%,95%);
  display: none;
  overflow: auto;
}

.rev
{
  padding-right: 5px;
  text-align: right;
  white-space: nowrap;
}

.updirrow
{
  padding: 0px;
  background: rgb(100%,90%,70%);
}

.updir
{
  padding: 2px;
}

.pathrow
{
  padding: 0px;
  background: rgb(100%,80%,40%);
}

.pathrow td
{
  border-top: 1px rgb(90%,70%,30%) solid;
}

td.path
{
  padding: 2px;
  width: 99%;
  white-space: nowrap;
}

.path a, .path a:visited
{
  color: black;
  text-decoration: none;
  padding-left: 0.1em;
  padding-right: 0.1em;
}

.path a:hover, .path a:active
{
  background: rgb(100%,100%,0%);
  text-decoration: none;
  font-weight: bold;
  padding-left: 0.5em;
  padding-right: 0.5em;
}

.path a:active
{
  background: rgb(0%,100%,0%);
}

td.pathname
{
  width: 99%;
  white-space: nowrap;
}

.revinfo
{
  float: right;
  color: rgb(35%,35%,35%);
  font-size: 80%;
  font-weight: normal;
  text-decoration: none;
  margin-left: 0.4em;
  margin-right: 0.4em;
}

.svnentryicon
{
  margin-right: 0.5em;
}

.dirrow
{
  padding: 0px;
  background: rgb(80%,80%,70%);
}

.dirrow td
{
  border-top: 1px rgb(70%,70%,60%) solid;
}

.dir
{
  padding: 2px;
}

.filerow
{
  padding: 0px;
  background: rgb(95%,95%,95%);
}

.filerow td
{
  border-top: 1px rgb(85%,85%,85%) solid;
}

.file
{
  padding: 2px;
}

.showlog
{
  padding: 0px;
  padding-left: 1px;
  padding-right: 1px;
  opacity: 0.6;
}

td.showlog
{
  width: 1px;
}

td.foldspace
{
  width: 1%;
  padding: 0px;
}

.dirarrow .logheader, .blameline0, .blameline1, tr.revision
{
  cursor: pointer;
}

.updir:hover
{
  background: rgb(100%,90%,90%);
}

.dir:hover
{
  background: rgb(100%,100%,80%);
}

.file:hover
{
  background: rgb(100%,100%,90%);
}

.dirarrow:hover, .showlog a:hover, .showlog:hover
{
  background: rgb(100%,100%,50%);
  opacity: 1.00;
}

.example
{
  margin-left: 2em;
}

.commandLine
{
}

.commandOutput
{
  font-size: 90%;
  color: blue;
}

.revision
{
  margin-top: 0.3em;
  margin-bottom: 0.3em;
  border-top: 1px black solid;
  border-bottom: 1px black solid;
  font-size: 12pt;
}

table.revision
{
  width: 100%;
}

tr.revision:hover
{
  background: rgb(100%,100%,75%);
}

th.revision
{
  border: 0px;
  padding-right: 4px;
  text-align: right;
  line-height: 16pt;
  vertical-align: baseline;
  font-size: 14pt;
}

td.user
{
  padding-right: 4px;
  text-align: left;
  line-height: 16pt;
  vertical-align: baseline;
  font-size: 11pt;
}

div.user
{
  white-space: nowrap;
  line-height: 8pt;
  font-size: 8pt;
}

img.user
{
  margin: 1px;
  vertical-align: middle;
}

.revdate
{
  font-size: 14pt;
  vertical-align: baseline;
}

.revdate span
{
  margin-left: 1em;
  font-size: 8pt;
}

.revstat
{
  float: right;
  margin-right: 4px;
  color: rgb(10%,10%,10%);
  font-size: 9pt;
}

.revstatdetails
{
  margin-right: 1em;
  color: rgb(50%,50%,50%);
}

.logheader
{
  margin: 0px;
  padding-top: 2px;
  padding: 0px;
  background: rgb(100%,90%,90%);
  font-size: 12pt;
  font-weight: bold;
  padding: 4px;
}

.logheader:hover
{
  background: rgb(100%,80%,80%);
}

.logheader1
{
  padding-right: 4px;
}

#details
{
  font-weight: normal;
  font-size: 10pt;
  text-align: right;
  width: 99%;
}

td.details
{
  width: 99%;
}

.logtitle
{
  margin: 0px;
  padding: 0px;
  background: rgb(100%,90%,90%);
  text-align: center;
  font-size: 14pt;
  font-weight: bold;
}

.revcount
{
  font-size: 10pt;
  padding-left: 2em;
  font-weight: normal;
}

.spacer
{
  height: 1px;
  background: rgb(50%,50%,50%);
  padding: 0px;
}

.logmsg
{
  margin-top: 0.25em;
  margin-bottom: 0.25em;
  font-size: 9pt;
}

.morelog
{
  text-align: right;
  padding-bottom: 0.3em;
  margin-bottom: 0.3em;
  border-bottom: 1px black solid;
  font-size: 12pt;
}

.paths
{
  background: rgb(95%,95%,95%);
  border: 1px rgb(70%,70%,70%) solid;
  padding: 1px;
  margin: 3px;
}

.pathline
{
  margin: 0px;
  padding: 0px;
  font-size: 8pt;
  clear: left;
}

.pathline:hover
{
  background: rgb(90%,90%,90%);
}

.pathaction
{
  float: left;
  font-weight: bold;
  text-align: center;
  color: rgb(0%,50%,0%);
  width: 2em;
}

.pathfile
{
  padding-left: 2em;
  white-space: nowrap;
}

.copyfrom
{
  padding-left: 2em;
  color: rgb(40%,50%,40%);
}

.copyfromnote
{
  color: rgb(60%,70%,60%);
}

/* We use this to hide/show the popup menu and to make the shaddow for it */
.pathpopup
{
  position: absolute;
  z-index: 1;
  display: none;
}

/* The dropshadow for the menu is here. */
.pathpopupshadow
{
  background: rgb(50%,50%,40%);
  position: relative;
  /* Note that this offset for the shadow must be matched in the menu */
  top: 4px;
  left: 4px;
}

/* The actual menu section begins here... */
.pathpopupmenu
{
  background: rgb(100%,100%,75%);
  position: relative;
  /* Note that this offset for the menu must be matched in the shadow */
  top: -4px;
  left: -4px;
  padding-bottom: 1px;
  border-left: 2px black solid;
  border-right: 2px black solid;
  border-bottom: 2px black solid;
  text-align: left;
}

.pathpopupmenuitem, .pathpopupmenutext
{
  color: rgb(0%,0%,0%);
  padding-left: 0.3em;
  padding-right: 0.3em;
}

.pathpopupmenu a, .pathpopupmenu a:visited, .pathpopupmenu a:hover, .pathpopupmenu a:active
{
  color: black;
  text-decoration: none;
  width: 100%;
}

.pathpopupmenu a:hover, .pathpopupmenuitem:hover
{
  background: rgb(90%,100%,0%);
}

.pathpopupmenu a:active
{
  background: rgb(0%,100%,0%);
}

.menusegment
{
  margin: 0px;
  margin-top: 1px;
  border: 0px;
  border-top: 1px rgb(70%,70%,70%) solid;
}

.blametitle
{
  font-size: 16pt;
  margin: 0px;
}

.blame
{
  border-top: 3px black solid;
  margin-top: 4px;
  padding-top: 2px;
  width: 100%;
}

.blameline0
{
  background: rgb(90%,100%,95%);
}

.blameline1
{
  background: rgb(90%,95%,100%);
}

.blameline0 :hover, .blameline1 :hover
{
  background: rgb(100%,100%,75%);
}

.blamerev
{
  margin: 0px;
  padding: 0px;
  text-align: right;
  vertical-align: top;
  padding-left: 0.5em;
}

.blameuser
{
  margin: 0px;
  padding: 0px;
  text-align: left;
  vertical-align: top;
  padding-left: 0.5em;
  padding-right: 0.5em;
  white-space: nowrap;
}

.blamelines
{
  margin: 0px;
  padding: 0px;
  padding-left: 0.5em;
  border-left: 1px rgb(0%,0%,70%) solid;
  text-align: left;
  vertical-align: top;
  width: 99%;
  white-space: pre;
}

.difftitle
{
  font-size: 16pt;
  margin: 0px;
}

.diffindex
{
  background: white;
  font-size: 16pt;
  border-top: 3px black solid;
  margin-top: 4px;
  padding-top: 2px;
}

.diff
{
  border-bottom: 1px rgb(75%,75%,75%) solid;
  padding-top: 3px;
  padding-bottom: 3px;
  background: rgb(95%,95%,95%);
}

.diff0, .diff1, .diff2
{
  white-space: pre;
  font-family: monospace;
}

.diff1
{
  background: rgb(100%,75%,75%);
}

.diff2
{
  background: rgb(75%,100%,75%);
}

.diff3
{
  border-top: 1px rgb(50%,50%,50%) solid;
  background: rgb(85%,85%,85%);
  padding-top: 1px;
}

.diffprop
{
  border-top: 1px rgb(50%,50%,50%) solid;
  background: rgb(100%,100%,85%);
  font-size: 12pt;
  padding: 1em;
}

.rss-title
{
  font-size: 12pt;
  padding-bottom: 2px;
}

.rss-title div
{
  font-size: 16pt;
  font-weight: bold;
  margin-top: 4px;
}

.rss-item
{
  border-top: 1px solid rgb(75%,75%,75%);
  margin-top: 0.3em;
  padding-top: 0.3em;
  padding-bottom: 0.2em;
}

.rss-item a
{
  color: black;
  text-decoration: none;
  padding-left: 0.2em;
}

.rss-item a:hover
{
  color: green;
  text-decoration: underline;
}

.rss-item a:active
{
  color: red;
  text-decoration: underline;
}

.rss-itemtitle
{
  font-size: 14pt;
  font-weight: bold;
  padding-right: 1em;
  padding-left: 0.3em;
}

.rss-date
{
  color: rgb(50%,50%,50%);
  font-size: 10pt;
  padding-right: 1em;
}

.rss-author
{
  color: rgb(30%,30%,30%);
  font-size: 9pt;
  padding-right: 1em;
}

.rss-description
{
  padding-left: 2em;
}

.rss-description hr
{
  margin-right: 80%;
}

/* This stuff is here to "fix up" some of the bandwidth layout */
.bandwidth
{
  text-align: center;
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

.bandwidth p
{
  margin: 0.3em;
}

.bandwidth pre
{
  text-align: left;
  margin: 0px;
}

.bandwidth table
{
  text-align: left;
  margin-left: auto;
  margin-right: auto;
}

.NoHTTPS
{
  display: block;
  margin: 1em;
  border: 0.5em solid black;
  padding: 0.5em;
  background-color: yellow;
  font-size: 120%;
  color: black;
  text-decoration: none;
  text-align: left;
}

.NoHTTPS a, .NoHTTPS a:visited
{
  color: black;
  font-weight: bold;
  text-decoration: underline;
}

.NoHTTPS a:hover
{
  color: blue;
}

.NoHTTPS a:active
{
  color: red;
}

